Navbar changes colour on scroll

--- a/style.css
+++ b/style.css
@@ -6,3 +6,9 @@ body {
     height: 90vh;
     width: 30vh;
 }
+.navbar.scrolled{
+    background-color: #fff;
+    }
+    .container{
+        padding-top: 8%;
+    }
