--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     width: 30vh;
 }
 .navbar.scrolled{
-    background-color: #fff;
+    background-color: #ddd;
     }
     .container{
         padding-top: 8%;
